# calibration_utils

./: README.md
arcar/: CMakeLists.txt  readme.md  基于消失点的相机俯仰角偏航角计算方法.md
arcar/src/: CMakeLists.txt  process_main.cc  vanishing_point_based_atti_cali.cc  vanishing_point_based_atti_cali.h
cam_imu_cali/: clang_tidy.sh
cam_imu_cali/data/cam/: 2D-jmw.txt
cam_imu_cali/data/imu/: bias_estimate.txt  imudata.txt  imudata_20.txt  key_frame_error_vec.txt  key_frame_left_vec.txt  key_frame_right_vec.txt  key_frame_rotation_quaternion_in_camera_frame.txt  key_frame_rotation_quaternion_in_camera_frame_10.txt  qgb_estimate.txt  wb_estimate.txt  wm_measure.txt
cam_imu_cali/reference/: hand eye calibration.md
cam_imu_cali/src/: extended_kalman_filter.cc  extended_kalman_filter.h  ground_truth_sample_test.cc  imu.cc  imu.h  imu_data_generator.cc  imu_fusion_main_copy.cc  run.sh
imu_attitude_fusion_ekf/: CMakeLists.txt
imu_attitude_fusion_ekf/data/imu/: datalog.txt  key_frame_rotation_quaternion_in_camera_frame_100.txt  key_frame_rotation_quaternion_in_camera_frame_20.txt  key_frame_rotation_quaternion_in_camera_frame_30.txt  key_frame_rotation_quaternion_in_camera_frame_60.txt  key_frame_rotation_quaternion_in_ground_frame.txt  key_frame_rotation_vecs_in_camera_frame.txt
imu_attitude_fusion_ekf/data/points/: 2D-jmw.txt  3D-jmw.txt
imu_attitude_fusion_ekf/src/: CMakeLists.txt  find_chessboard_corner.cc  hand_eye_calibration.cc  hand_eye_calibration.h  imu_copy.h  imu_fusion_main.cc
intrinsics_calibration/: CMakeLists.txt  How to calibrate camera
intrinsics_calibration/data/cali/xavier003/front/: camera_**.intrinsics.proto.txt
intrinsics_calibration/src/: CMakeLists.txt  camera_calibration_main.cc  camera_intrinsics_calibration.cc  camera_intrinsics_calibration.h  camera_pyrdown_main.cc  run.sh
work_handover/: work handover.md
