cmake_minimum_required(VERSION 2.8)
project(cam_imu_cali)

set(CMAKE_BUILD_TYPE "Release")
add_definitions("-DENABLE_SSE")
set(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
#list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
find_package(OpenCV 3 REQUIRED)

include_directories(${OpenCV_INCLUDE_DIRS} "/usr/local/include/eigen3/")
#include_directories("/usr/local/opencv-4.5.1/include/opencv4/opencv2/" "/usr/local/include/eigen3/")
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(find_chessboard_corner find_chessboard_corner.cc)
target_link_libraries(find_chessboard_corner ${OpenCV_LIBS})
#add_executable(ground_truth_sample_test ground_truth_sample_test.cc)
#target_link_libraries(ground_truth_sample_test ${OpenCV_LIBS})

add_library(imu imu.cc)
add_library(extended_kalman_filter extended_kalman_filter.cc)
add_executable(imu_fusion_main imu_fusion_main.cc)
add_executable(hand_eye_calibration hand_eye_calibration.cc)
#add_executable(imu_fusion_main_copy imu_fusion_main_copy.cc)
target_link_libraries(imu_fusion_main imu extended_kalman_filter)
target_link_libraries(hand_eye_calibration ${OpenCV_LIBS})